Added more scenarios